--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -61,7 +61,7 @@
           </li>
           <li>
             <img
-              src="/images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -71,7 +71,7 @@
           </li>
           <li>
             <img
-              src="/images/img-1.jpg"
+              src="./images/img-1.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -81,7 +81,7 @@
           </li>
           <li>
             <img
-              src="/images/img.jpg"
+              src="./images/img.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
