--- a/index.html
+++ b/index.html
@@ -7,85 +7,82 @@
   </head>
   <body>
     <header>
-      <a href="/index.html">WEBSTUDIO</a>
       <nav>
+        <a href="./index.html"> WebStudio</a>
         <ul>
-          <li><p>Studio</p></li>
-          <li><p>Portfolio</p></li>
-          <li><p>Contacs</p></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacs</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="mailtoinfo@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
 
     <main>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order service</button>
-      <h2>Strategy</h2>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
-      <h2>Punctuality</h2>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
-      <h2>Diligence</h2>
-      <p>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-      </p>
-      <h2>Technologies</h2>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order service</button>
+      </section>
+
+      <section>
+        <h2 hidden>Advantages</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
+            <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
             <p>Mark Guerrero</p>
             <p>Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
+            <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
             <p>Tom Ford</p>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
+            <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
             <p>Camila Garcia</p>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/img.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
+            <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
             <p>Daniel Wilson</p>
             <p>UI Designer</p>
           </li>
@@ -94,7 +91,7 @@
     </main>
 
     <footer>
-      <a href="/index.html">WEBSTUDIO</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
