--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacs</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
@@ -26,7 +26,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order service</button>
+        <button type="button">Order Service</button>
       </section>
 
       <section>
@@ -68,22 +68,22 @@
         <ul>
           <li>
             <img src="./images/img-3.jpg" alt="Mark Guerrero" width="264" />
-            <p>Mark Guerrero</p>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/img-2.jpg" alt="Tom Ford" width="264" />
-            <p>Tom Ford</p>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img-1.jpg" alt="Camila Garcia" width="264" />
-            <p>Camila Garcia</p>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/img.jpg" alt="Daniel Wilson" width="264" />
-            <p>Daniel Wilson</p>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
